# Py3BR

./: .gitignore  README.md  pyproject.toml  setup.py
Py3BR/: analysis.py  constants.py  plotters.py  potentials.py  simulate.py  threebodies.py  util.py
example/PHe/: PHe 3BR.ipynb  PHe_3BR.ipynb  calc.py  inputs.py  sim3.py
example/PHe/results/: 1k_550_short.txt  k3.txt  opacity.txt  sample.txt  short.txt  sigma.txt
example/SSAr/: analysis.ipynb  calc.py
example/SSAr/results/s32/: short2.txt
example/SSAr/results/s32/c12/: short.txt
example/Sr+Cs/: SrCs_TBR.ipynb  calc.py  inputs.py  ins.txt  sim3.py
example/Sr+Cs/results/: 1k_2000.txt  k3.txt  matlab_P.txt  matlab_P_Cs2_err.txt  matlab_P_err.txt  opacity.txt  sample.txt  short.txt  short2.txt  sigma.txt
notebooks/: C60_recombination.ipynb  He_recombination.ipynb  N4_recombination.ipynb  N4_sample.csv  N4p_recombination.ipynb  SrCs_recombination.ipynb  c60_rates.csv  sample_results_SrCs.csv
notebooks/results/: SrCs_short.txt  c60_short.txt  n4_data.csv  n4_data.xlsx  n4_short.txt
scripts/: tbr_local.py  tbr_local_N4.py
tbr/: analysis.py  constants.py  physics.py  plotters.py  potentials.py  simulator.py
