[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Py3BR"
version = "0.1.0"
description = "Three-body recombination simulation package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pandas",
    "matplotlib"
]

[tool.setuptools.packages.find]
include = ["tbr*"]